Require Image Intervension Package

--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,17 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "php": "^7.3|^8.0",
+        "intervention/image": "^2.7",
+        "laravel/ui": "^3.3"
+    },
     "extra": {
         "laravel": {
             "providers": [
                 "DevSajid\\Permission\\PermissionServiceProvider"
             ]
-          
+
         }
     }
 }
