--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^7.3|^8.0",
-        "intervention/image": "^2.7",
+        "intervention/image": "^2.7"
     },
     "extra": {
         "laravel": {
